--- a/wattx_app/static/login.html
+++ b/wattx_app/static/login.html
@@ -84,12 +84,19 @@
     </div>
     <div class="row">
             <div class="col-md-offset-3 col-md-6 col-sm-offset-1 col-sm-10">
-                <div id="login_div">
+                <div id="signup_div">
                     <form id="contact-form" onsubmit="addUser(); return false;">
                         <input name="name" type="text" id="name" class="form-control" placeholder="Company Name" required>
                         <input name="email" type="email" id="email" class="form-control" placeholder="Email" required>
                         <input name="password" type="password" id="password" class="form-control" placeholder="Password" required>
                         <button type="submit" class="form-control submit" value="Sign Up">Sign Up</button>
+                    </form>
+                </div>
+                <div id="login_div">
+                    <form id="contact-form" onsubmit="logInUser(); return false;">
+                        <input name="email_login" type="email" id="email_login" class="form-control" placeholder="Email" required>
+                        <input name="password_login" type="password" id="password_login" class="form-control" placeholder="Password" required>
+                        <button type="submit" class="form-control submit" value="Sign Up">Log In</button>
                     </form>
                 </div>
             </div>
@@ -124,13 +131,13 @@
 
               <div class="wow fadeInUp col-sm-offset-1 col-md-6 col-sm-4" data-wow-delay="1.3s">
                 <img src="images/WATTx_Logo.png" width="450px" style= "margin-top: 25px">
-              </div>  
-        
+              </div>
+
               <div class="wow fadeInUp col-md-4 col-sm-4" data-wow-delay="1.6s">
                 <h3>Contact Details</h3>
                 <p>2 East Loop Rd., NY, NY 10044</p>
                 <p>(310) 254-5740  |  contact@checkmate.com</p>
-              </div> 
+              </div>
 
         </div>
     </div>
