--- a/wattx_app/static/index.html
+++ b/wattx_app/static/index.html
@@ -64,7 +64,8 @@
         <li><a href="team.html">Team</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
-      <a href="login.html" class="btn btn-default navbar-right">Login or Sign Up</a>
+      <a href="login.html" class="btn btn-default navbar-right">Sign Up</a>
+      <a href="signin.html" class="btn btn-default navbar-right">Login </a>
     </div>
   </div>
 </div>
