--- a/wattx_app/static/signin.html
+++ b/wattx_app/static/signin.html
@@ -78,27 +78,28 @@
   <div class="container">
     <div class="row">
       <div class="col-md-offset-2 col-md-8 col-sm-12">
-        <h1 class="wow fadeInUp" data-wow-delay="0.6s">Sign Up</h1>
+        <h1 class="wow fadeInUp" data-wow-delay="0.6s">Login</h1>
         <p class="wow fadeInUp" data-wow-delay="1.0s">Let's get started!</p>
+        <div id="error_area"></div>
       </div>
     </div>
     <div class="row">
             <div class="col-md-offset-3 col-md-6 col-sm-offset-1 col-sm-10">
-                <div id="signup_div">
+                <!-- <div id="signup_div">
                     <form id="contact-form" onsubmit="addUser(); return false;">
                         <input name="name" type="text" id="name" class="form-control" placeholder="Company Name" required>
                         <input name="email" type="email" id="email" class="form-control" placeholder="Email" required>
                         <input name="password" type="password" id="password" class="form-control" placeholder="Password" required>
                         <button type="submit" class="form-control submit" value="Sign Up">Sign Up</button>
                     </form>
-                </div>
-                <!-- <div id="login_div">
+                </div> -->
+                <div id="login_div">
                     <form id="contact-form" onsubmit="logInUser(); return false;">
                         <input name="email_login" type="email" id="email_login" class="form-control" placeholder="Email" required>
                         <input name="password_login" type="password" id="password_login" class="form-control" placeholder="Password" required>
                         <button type="submit" class="form-control submit" value="Sign Up">Log In</button>
                     </form>
-                </div> -->
+                </div>
             </div>
         </div>
   </div>
