--- a/wattx_app/static/login.html
+++ b/wattx_app/static/login.html
@@ -78,8 +78,12 @@
   <div class="container">
     <div class="row">
       <div class="col-md-offset-2 col-md-8 col-sm-12">
-        <h1 class="wow fadeInUp" data-wow-delay="0.6s">Sign Up</h1>
+        <h1 class="wow fadeInUp" id="title" data-wow-delay="0.6s">Login</h1>
         <p class="wow fadeInUp" data-wow-delay="1.0s">Let's get started!</p>
+        <button class="btn btn-default" id="switch1" onClick="log(); return false;" >Login</button>
+        <button class="btn btn-default" id="switch2" onClick="sign(); return false;" >Sign Up</button>
+        <!-- <a href="login.html" class="btn btn-default navbar-right" onClick="">Sign Up</a> -->
+        <!-- <a href="signin.html" class="btn btn-default navbar-right" onClick="">Login </a> -->
       </div>
     </div>
     <div class="row">
@@ -92,13 +96,13 @@
                         <button type="submit" class="form-control submit" value="Sign Up">Sign Up</button>
                     </form>
                 </div>
-                <!-- <div id="login_div">
+                <div id="login_div">
                     <form id="contact-form" onsubmit="logInUser(); return false;">
                         <input name="email_login" type="email" id="email_login" class="form-control" placeholder="Email" required>
                         <input name="password_login" type="password" id="password_login" class="form-control" placeholder="Password" required>
                         <button type="submit" class="form-control submit" value="Sign Up">Log In</button>
                     </form>
-                </div> -->
+                </div>
             </div>
         </div>
   </div>
