--- a/wattx_app/static/login.html
+++ b/wattx_app/static/login.html
@@ -65,7 +65,7 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
       <!-- TODO: Fix -->
-      <a href="survey.html" class="btn btn-default navbar-right" style="background: #6e7d93 !important; color:  #ffffff;">Bypass</a>
+      <!-- <a href="survey.html" class="btn btn-default navbar-right" style="background: #6e7d93 !important; color:  #ffffff;">Bypass</a> -->
       <!-- <a href="login.html" class="btn btn-default navbar-right" style="background: #6e7d93 !important; color:  #ffffff;">Login or Sign Up</a> -->
     </div>
   </div>
